unpackaged/main/default/objects/Service_Traduction__c/Service_Traduction__c.object-meta.xml
<CustomObject>
    <label>Service Traduction</label>
    <nameField>
        <label>Service Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services Traduction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>