unpackaged/main/default/objects/Service_Traduction__c/fields/Langage_Code__c.field-meta.xml
<CustomField>
    <fullName>Langage_Code__c</fullName>
    <label>Langage Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>fr-FR</fullName>
            </value>
            <value>
                <fullName>en-US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>