unpackaged/main/default/objects/Service_Traduction__c/fields/Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Code__c</fullName>
    <label>Service Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>