unpackaged/main/default/objects/Service_Traduction__c/fields/Service_Description__c.field-meta.xml
<CustomField>
    <fullName>Service_Description__c</fullName>
    <label>Service Description</label>
    <length>120</length>
    <type>Text</type>
</CustomField>