unpackaged/main/default/objects/Service_Traduction__c/fields/Service_Description_trad__c.field-meta.xml
<CustomField>
    <fullName>Service_Description_trad__c</fullName>
    <label>Service Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>