unpackaged/main/default/objects/Service_Traduction__c/fields/Service_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Service_Parameters__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Parameters</label>
    <referenceTo>Service_Parameter__c</referenceTo>
    <relationshipLabel>Services Traduction</relationshipLabel>
    <relationshipName>Services_Traduction</relationshipName>
    <type>Lookup</type>
</CustomField>